# starfield

./: .gitignore  README.md  pyproject.toml
attrs_extensions/: starfield.py
starfield/: __init__.py  __init__.pyi
